--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://Yaxshapaul5.github.io/Yaxsha_Paul-s-Portfolio",
   "dependencies": {
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
